# need-for-fun

./: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  README.md  bun.lockb  index.html  package-lock.json  package.json  vercel.json  vite.config.js  webpack.config.js
.github/workflows/: deploy-server.yml  vite-build.yml
apps/lobby-server/: README.md
apps/lobby-web/: package.json  tsconfig.json  vite.config.ts
apps/lobby-web/src/: router.tsx  styles.css
apps/server/: Cargo.toml
apps/server/src/: binary.rs  constants.rs  game.rs  main.rs  room.rs  room_manager.rs
apps/web/: .env.example  index.html  vite.config.js
apps/web/src/: assets.js  binaryProtocolWasm.js  bootstrap.js  bot.js  botManager.js  helpers.js  main.js  map.js  network.js  player.js  protocolWasm.js
crates/binary_protocol/: Cargo.toml
crates/binary_protocol/src/: constants.rs  decode.rs  encode.rs  lib.rs  wasm.rs
crates/client_wasm/: Cargo.toml
crates/client_wasm/src/: lib.rs
crates/physics_core/: Cargo.toml
crates/physics_core/src/: constants.rs  explosion.rs  lib.rs  projectile.rs  step.rs  types.rs  weapon.rs
crates/physics_core/tests/: wasm_parity.rs
docs/: client-netcode-buffering-implementation-prompt.md  physics-parity-and-wasm.md  shared-rust-physics-kernel.md
infra/: README.md  gameserver.service  main.tf  outputs.tf  variables.tf
public/maps/: dm2.txt
scripts/: compare-physics-recordings.mjs
server/: Cargo.toml
server/src/: binary.rs  constants.rs  game.rs  main.rs  map.rs  physics.rs  protocol.rs  room.rs
shared/binary_protocol/: Cargo.toml
shared/binary_protocol/src/: constants.rs  decode.rs  encode.rs  lib.rs  types.rs  wasm.rs
shared/physics_core/: Cargo.toml
shared/physics_core/src/: constants.rs  explosion.rs  lib.rs  projectile.rs  step.rs  test_vectors.rs  types.rs  wasm.rs  weapon.rs
src/: assets.js  binaryProtocol.js  binaryProtocolWasm.js  bot.js  botManager.js  engine.js  helpers.js  main.js  map.js  models.js  network.js  player.js  projectiles.js  weapons.js
src/engine/core/: camera.js  physics.js
src/engine/render/: app.js  constants.js  effects.js  (+4 more)
(+144 files in other folders)
