[package]
name = "nff-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
binary_protocol = { path = "../shared/binary_protocol", features = ["server"] }
bytes = "1"
futures-util = "0.3"
physics_core = { path = "../shared/physics_core" }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
smallvec = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
webrtc = "0.8"
serde_json = "1"
