[package]
name = "binary_protocol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
server = ["dep:bytes"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }
