[package]
name = "physics_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
wasm = ["dep:wasm-bindgen", "binary_protocol/wasm"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
binary_protocol = { path = "../binary_protocol" }
